# profile-matcher-backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
docs/: NEW_ARCHITECTURE.md  login.md  teams-api.md
scripts/: init_database.py
scripts/sql-scripts/: 01_profile_schema.sql  02_attributes_schema.sql  03_ego_schema.sql  SCHEMA_DOCUMENTATION.md
src/: database.py
src/api/v1/: attributes.py  ego.py  profile.py  users.py
src/auth/: admin_client.py  routes.py  supabase_client.py  upload.py
src/config/: settings.py
src/models/: team.py  user.py
src/routes/: interests.py  teams.py
tests/: test_attributes.py  test_ego.py  test_profile.py
