[project]
name = "profile-matcher-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.1.1",
    "supabase>=2.17.0",
]
